src/test/deca/syntax/valid/testPrint.deca
// test printing two variables.
// Result : Ok
//
{
    int x = 9;
    float y = 2.0f;
    print(x,y);
}
